--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^2.1.4"
   },
